Profile Page Added.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,4 +6,125 @@
     android:layout_height="match_parent"
     tools:context=".profile">
 
+
+    <ImageView
+        android:id="@+id/profile_imageID"
+        android:layout_width="140dp"
+        android:layout_height="115dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.093"
+        tools:srcCompat="@drawable/profile" />
+
+    <ImageView
+        android:id="@+id/verifed_imageID"
+        android:layout_width="29dp"
+        android:layout_height="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.902"
+        app:layout_constraintStart_toStartOf="@+id/profile_imageID"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.205"
+        app:srcCompat="@drawable/verified" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/information_cardViewID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        android:minHeight="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_imageID">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/NameId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="NAME : Tushar Tambi"
+                android:textColor="#000"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/Ecode_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="E-Code: E-1212"
+                android:textColor="#000"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/Email_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="E-Mail: tusahrtambi@gmail.com"
+                android:textColor="#000"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/Phone_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Phone No. 8426988382"
+                android:textColor="#000"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/Department_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Department: CSE"
+                android:textColor="#000"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/Qualification_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Qualification: BE In CSE"
+                android:textColor="#000"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/University_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="University: Chandigarh University"
+                android:textColor="#000"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/DOB_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:text="DOB: 09 Oct. 2000"
+                android:textColor="#000"
+                android:textSize="20sp"></TextView>
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
