--- a/app/src/main/res/layout/fragment_view_fragment.xml
+++ b/app/src/main/res/layout/fragment_view_fragment.xml
@@ -8,6 +8,7 @@
 
 
    <TextView
+       android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Here all the research paper and work are displayed"
@@ -17,5 +18,17 @@
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
+
+   <Button
+       android:id="@+id/uploadbtn_ID"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Upload"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.95"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintVertical_bias="0.954" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
