--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
+    tools:context=".Register"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -45,6 +46,7 @@
             app:layout_constraintVertical_bias="0.100000024" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="24dp"
@@ -63,6 +65,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <Button
+                    android:id="@+id/Registerregisterbutton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="45dp"
+                    android:layout_marginEnd="45dp"
+                    android:background="@drawable/button"
+                    android:text="Register"
+                    android:textAllCaps="false"
+                    android:textColor="#fff"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
                 <ScrollView
                     android:id="@+id/scrollView2"
                     android:layout_width="0dp"
@@ -74,12 +92,29 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" >
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        tools:context=".Register">
+                        >
+
+                        <Button
+                            android:id="@+id/verifyregisterbutton"
+                            style="@style/TextAppearance.AppCompat.Button"
+                            android:layout_width="85dp"
+                            android:layout_height="40dp"
+                            android:layout_marginEnd="32dp"
+                            android:background="@drawable/transparentbutton"
+                            android:fontFamily="@font/roboto"
+                            android:padding="5dp"
+
+                            android:text="Verify"
+                            android:textAllCaps="false"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout7"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/textInputLayout7" />
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/textInputLayout3"
@@ -128,7 +163,7 @@
                             android:layout_marginStart="32dp"
                             android:layout_marginTop="16dp"
                             android:layout_marginEnd="32dp"
-                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
@@ -162,12 +197,15 @@
 
                         </com.google.android.material.textfield.TextInputLayout>
 
+
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/textInputLayout6"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="32dp"
                             android:layout_marginTop="16dp"
+                            app:counterEnabled="true"
+                            app:errorEnabled="true"
                             android:layout_marginEnd="32dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="1.0"
@@ -183,7 +221,6 @@
 
                         </com.google.android.material.textfield.TextInputLayout>
 
-
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/textInputLayout1"
                             android:layout_width="0dp"
@@ -191,6 +228,8 @@
                             android:layout_marginStart="32dp"
                             android:layout_marginTop="16dp"
                             android:layout_marginEnd="32dp"
+                            app:counterEnabled="true"
+                            app:errorEnabled="true"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="1.0"
                             app:layout_constraintStart_toStartOf="parent"
@@ -204,6 +243,7 @@
                                 android:inputType="textPassword" />
 
                         </com.google.android.material.textfield.TextInputLayout>
+
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/textInputLayout7"
@@ -225,7 +265,6 @@
                                 android:inputType="numberSigned" />
 
                         </com.google.android.material.textfield.TextInputLayout>
-
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/textInputLayout8"
@@ -328,54 +367,30 @@
 
                         </com.google.android.material.textfield.TextInputLayout>
 
-                        <Button
-                            android:id="@+id/verifyregisterbutton"
-                            style="@style/TextAppearance.AppCompat.Button"
-                            android:layout_width="85dp"
-                            android:layout_height="40dp"
-                            android:layout_marginEnd="32dp"
-                            android:background="@drawable/transparentbutton"
-                            android:fontFamily="@font/roboto"
-                            android:padding="5dp"
-
-                            android:text="Verify"
-                             android:textAllCaps="false"
-                            android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout7"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/textInputLayout7" />
-
-
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
                 </ScrollView>
-
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:background="@drawable/button"
-                    android:textColor="#fff"
-                    android:textSize="20sp"
-                    android:textAllCaps="false"
-                    android:text="Register"
-                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
         </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/Alreadyamembertext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Already a Member? Sign In"
+            android:textColor="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
