--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,9 +80,9 @@
                         android:id="@+id/signinloginbutton"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="64dp"
+                        android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
-                        android:layout_marginEnd="64dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_marginBottom="16dp"
                         android:background="@drawable/button"
                         android:padding="10dp"
@@ -97,7 +97,7 @@
                         app:layout_constraintVertical_bias="0.41000003" />
 
                     <TextView
-                        android:id="@+id/Registerloginbutton"
+                        android:id="@+id/Notamembertext"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
