--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,8 @@
             app:layout_constraintGuide_percent=".30" />
 
 
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -45,6 +47,16 @@
         android:layout_height="match_parent"
         >
 
+            <TextView
+                android:id="@+id/Notamembertext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Not a Member? Register"
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintEnd_toEndOf="@+id/cardView2"
+                app:layout_constraintStart_toStartOf="@+id/cardView2"
+                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
             <!--            <ImageView-->
 <!--                android:id="@+id/imageView"-->
 <!--                android:layout_width="100dp"-->
@@ -95,20 +107,6 @@
                         app:layout_constraintTop_toBottomOf="@+id/forgetpasswordloginbutton"
                         app:layout_constraintVertical_bias="0.41000003" />
 
-                    <TextView
-                        android:id="@+id/Notamembertext"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="32dp"
-                        android:text="Not a Member? Register"
-                        android:textColor="@color/colorPrimary"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.505"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/signinloginbutton"
-                        app:layout_constraintVertical_bias="0.0" />
 
                     <TextView
                         android:id="@+id/textView2"
@@ -135,10 +133,12 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputLayout3"
-                        android:layout_width="280dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
+                        android:layout_marginStart="32dp"
 
+                        android:layout_marginTop="24dp"
+                        android:layout_marginEnd="32dp"
                         app:errorEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.503"
@@ -158,7 +158,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputLayout4"
-                        android:layout_width="280dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="32dp"
                         android:layout_marginBottom="32dp"
